[package]
name = "taxbit-dropped-txs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = "1.0.136"
taxbit-export-rec = { git = "https://github.com/winksaville/taxbit-export-rec" }
taxbitrec = { git = "https://github.com/winksaville/taxbitrec" }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
